- Search bar added - Minor UI Fixes

--- a/GP App/Base.lproj/Main.storyboard
+++ b/GP App/Base.lproj/Main.storyboard
@@ -145,16 +145,16 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="ZR2-T7-hnn">
                         <rect key="frame" x="0.0" y="59" width="430" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" name="Orange"/>
+                        <color key="barTintColor" name="GPOrange"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textShadowColor" name="Orange"/>
+                            <color key="textShadowColor" name="GPOrange"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
-                            <color key="textShadowColor" name="Orange"/>
+                            <color key="textShadowColor" name="GPOrange"/>
                         </textAttributes>
                         <navigationBarAppearance key="scrollEdgeAppearance" backgroundEffect="prominent">
-                            <color key="backgroundColor" name="Orange"/>
-                            <color key="shadowColor" name="Orange"/>
+                            <color key="backgroundColor" name="GPOrange"/>
+                            <color key="shadowColor" name="GPOrange"/>
                         </navigationBarAppearance>
                     </navigationBar>
                     <connections>
@@ -194,8 +194,8 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <tabBarAppearance key="scrollEdgeAppearance" backgroundEffect="prominent">
-                            <color key="shadowColor" name="Orange"/>
-                            <color key="selectionIndicatorTintColor" name="Orange"/>
+                            <color key="shadowColor" name="GPOrange"/>
+                            <color key="selectionIndicatorTintColor" name="GPOrange"/>
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
@@ -297,7 +297,7 @@
                                     <constraint firstAttribute="height" constant="30" id="s5V-b2-r0w"/>
                                 </constraints>
                                 <buttonConfiguration key="configuration" style="filled" image="xmark" catalog="system" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="Qz7-d5-7tK" kind="unwind" unwindAction="unwindToMainWithSegue:" id="4Fc-LC-cTr"/>
@@ -310,7 +310,7 @@
                                     <constraint firstAttribute="height" constant="30" id="nBY-5j-pnW"/>
                                 </constraints>
                                 <buttonConfiguration key="configuration" style="filled" image="info.circle.fill" catalog="system" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                             </button>
                         </subviews>
@@ -685,7 +685,7 @@
                                     <constraint firstAttribute="width" constant="30" id="u1D-9a-iuW"/>
                                 </constraints>
                                 <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="tN3-sP-smo" kind="unwind" unwindAction="unwindToMainWithSegue:" id="fO9-Os-YBf"/>
@@ -699,7 +699,7 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" image="info.circle.fill" catalog="system" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                             </button>
                         </subviews>
@@ -744,7 +744,7 @@
                                     <constraint firstAttribute="width" constant="30" id="rff-5x-D9b"/>
                                 </constraints>
                                 <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="mhl-8w-6Ox" kind="unwind" unwindAction="unwindToMainWithSegue:" id="PWQ-hp-C4B"/>
@@ -758,7 +758,7 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" image="info.circle.fill" catalog="system" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                             </button>
                         </subviews>
@@ -803,7 +803,7 @@
                                     <constraint firstAttribute="height" constant="30" id="md1-MW-Qsz"/>
                                 </constraints>
                                 <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="wNp-iD-yra" kind="unwind" unwindAction="unwindToMainWithSegue:" id="TOk-gE-jjz"/>
@@ -817,7 +817,7 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" image="info.circle.fill" catalog="system" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                             </button>
                         </subviews>
@@ -862,7 +862,7 @@
                                     <constraint firstAttribute="height" constant="30" id="YAf-mQ-W17"/>
                                 </constraints>
                                 <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="AmD-5b-7qc" kind="unwind" unwindAction="unwindToMainWithSegue:" id="pcH-2i-vKk"/>
@@ -876,7 +876,7 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" image="info.circle.fill" catalog="system" cornerStyle="capsule">
-                                    <color key="baseBackgroundColor" name="Orange"/>
+                                    <color key="baseBackgroundColor" name="GPOrange"/>
                                 </buttonConfiguration>
                             </button>
                         </subviews>
@@ -943,6 +943,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" name="GPOrange"/>
                     </tabBar>
                     <connections>
                         <segue destination="8ha-t0-htA" kind="relationship" relationship="viewControllers" id="jek-1q-XB0"/>
@@ -961,6 +962,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" name="GPOrange"/>
                     </tabBar>
                     <connections>
                         <segue destination="Y6K-3x-bm7" kind="relationship" relationship="viewControllers" id="w6D-ac-Uwy"/>
@@ -981,6 +983,9 @@
         <image name="photo.fill.on.rectangle.fill" catalog="system" width="128" height="102"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
+        <namedColor name="GPOrange">
+            <color red="0.94901960784313721" green="0.46274509803921571" blue="0.28627450980392155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Orange">
             <color red="0.94901960784313721" green="0.46274509803921571" blue="0.28627450980392155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
